# opengl_kartsim

./: .gitignore  CMakeLists.txt  README.md  alg_linear.h  camera.h  main  main.cpp  p3_to_p2.py  test  vectors.h
assets/: 05_textura.cpp  Ambiente_CG.blend  Ambiente_CG.blend1  file.ppm  imagem_cinza.ppm  input.ppm  output.ppm  quad.ppm  relevo_terreno.ppm  textura_arquibancada.kra  textura_arquibancada.png~  textura_bandeira.kra  textura_bandeira.png~  textura_carro.kra  textura_pneus.kra  textura_pneus_png.png~  textura_terreno.kra  textura_terreno_grande.kra  textura_terreno_grande.png~  textura_terreno_png.png~
include/: objloader.hpp
scripts/: input.ppm  p3_to_p2.py
src/: main.cpp  test.cpp
src/gameobjects/: camera.cpp  camera.h  gameobjects.cpp  gameobjects.h  terrain.cpp  terrain.h
src/graphics/: camera.cpp  camera.h  light.h  material.h  objloader.cpp  skybox.cpp  skybox.h
src/math/: alg_linear.h  matrix.cpp  matrix.h  vectors.cpp  vectors.h
